--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,9 @@ steps:
       {
         "localIdentifier": "abcd1234"
       }
+- powershell: |
+   Start-Sleep -Seconds 60  
+  displayName: 'sleeepy'
 
 - script: |
     npm install
