--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,7 +7,7 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: Default
 
 steps:
 - task: NodeTool@0
@@ -15,7 +15,21 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
+- task: BrowserStackConfig@0
+  inputs:
+    BrowserStackServiceEndPoint: 'firstConnection'
+    browserstackLocal: true
+    bsLocalOptions: |
+      {
+        "localIdentifier": "pipeline2"
+      }
+- task: Bash@3
+  inputs:
+    targetType: inline
+    script: 'sleep 10'
+
 - script: |
     npm install
     npm run build
   displayName: 'npm install and build'
+- task: BrowserStackStopLocal@0
