--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - main
 
@@ -17,16 +12,16 @@ steps:
 
 - task: BrowserStackConfig@0
   inputs:
-    BrowserStackServiceEndPoint: 'firstConnection'
+    BrowserStackServiceEndPoint: 'org2local'
     browserstackLocal: true
     bsLocalOptions: |
       {
-        "localIdentifier": "abcd1234"
+        "localIdentifier": "org2local1"
       }
 - task: Bash@3
   inputs:
     targetType: inline
-    script: 'sleep 50'
+    script: 'sleep 30'
 
 - script: |
     npm install
