--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,16 +17,16 @@ steps:
 
 - task: BrowserStackConfig@0
   inputs:
-    BrowserStackServiceEndPoint: 'firstConnection'
+    BrowserStackServiceEndPoint: 'org2local'
     browserstackLocal: true
     bsLocalOptions: |
       {
-        "localIdentifier": "abcd1234"
+        "localIdentifier": "org2local1"
       }
 - task: Bash@3
   inputs:
     targetType: inline
-    script: 'sleep 50'
+    script: 'sleep 20'
 
 - script: |
     npm install
