--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -32,4 +32,7 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
 - task: BrowserStackStopLocal@0
+  inputs:
+    localIdentifier: 'pipeline2'
