--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -31,6 +31,7 @@ steps:
 - script: |
     npm install
     npm run build
+    node test.js
   displayName: 'npm install and build'
 
 - task: BrowserStackStopLocal@0
