Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -30,7 +30,7 @@ steps:
 
 - script: |
     npm install
-    node test.js
+    node abc.js
   displayName: 'npm install and build'
 
 - task: BrowserStackStopLocal@0
