Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -31,6 +31,7 @@ steps:
 - script: |
     npm install
     node test.js
+    node test2.js
   displayName: 'npm install and build'
 
 - task: BrowserStackStopLocal@0
