--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - main
 
 pool:
-  name: Default
+  vmImage: ubuntu-latest
 
 steps:
 - task: NodeTool@0
@@ -19,14 +19,10 @@ steps:
   inputs:
     BrowserStackServiceEndPoint: 'firstConnection'
     browserstackLocal: true
-    bsLocalOptions: |
-      {
-        "localIdentifier": "abcd1234"
-      }
 - task: Bash@3
   inputs:
     targetType: inline
-    script: 'sleep 50'
+    script: 'sleep 5'
 
 - script: |
     npm install
