--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 
 - task: BrowserStackConfig@0
   inputs:
-    BrowserStackServiceEndPoint: 'firstConnection'
+    BrowserStackServiceEndPoint: 'bstack_novov'
     browserstackLocal: true
     bsLocalOptions: |
       {
