--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - main
 
 pool:
-  name: Default
+  vmImage: ubuntu-latest
 
 steps:
 - task: NodeTool@0
@@ -19,10 +19,6 @@ steps:
   inputs:
     BrowserStackServiceEndPoint: 'bstack_novov'
     browserstackLocal: true
-    bsLocalOptions: |
-      {
-        "localIdentifier": "abcd1234"
-      }
 - task: Bash@3
   inputs:
     targetType: inline
